<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layoutRegister"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <soup.neumorphism.NeumorphTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Registrasi"
        android:textColor="@color/orange"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <soup.neumorphism.NeumorphTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutRegUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="4dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DBD5D5"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <soup.neumorphism.NeumorphTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nomor Handphone"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutNomorHandphone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DBD5D5"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <soup.neumorphism.NeumorphTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DBD5D5"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <soup.neumorphism.NeumorphTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tanggal Lahir"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutTanggalLahir"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DBD5D5"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <soup.neumorphism.NeumorphTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DBD5D5"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayout2"
        app:layout_constraintStart_toStartOf="@+id/LinearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnRegistrasi"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Registrasi"
            app:neumorph_backgroundColor="#FF7A00"/>
    </LinearLayout>

    <soup.neumorphism.NeumorphTextView
        android:id="@+id/textMoveLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Login"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayout"
        app:layout_constraintStart_toStartOf="@+id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>